Fix Bug : Tree	--> texts jumps back and forth when expand/collapse the accordion

--- a/src/assets/examples/tree-basic/tree-basic.component.css
+++ b/src/assets/examples/tree-basic/tree-basic.component.css
@@ -1,4 +1,6 @@
+.example-container {
+  display: inline-flex
+}
 viz-tree {
-  display: flex;
-  justify-content: center;
+  width: 150px;
 }
